# foobar2000_dsd_mac

./: .gitignore  CMakeLists.txt  Info.plist  LICENSE  README.md
src/: coreaudio_backend.h  coreaudio_backend.mm  dop_encoder.cpp  dop_encoder.h  dsd_config.h  dsd_config.mm  dsd_device_manager.h  dsd_device_manager.mm  dsd_output.h  dsd_output.mm  fb2k_output.h  fb2k_output.mm  main.mm
